# ibus-afrim

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL  README.md
.github/workflows/: build.yml  cmake.yml  rust.yml
apps/: CMakeLists.txt  afrim.xml.in  engine.c  main.c
include/ibus_afrim/: engine.h
src/: CMakeLists.txt
src/service/: Cargo.toml
src/service/ibus/: Cargo.toml  build.rs
src/service/lib/: Cargo.toml  build.rs  cbindgen.toml
src/service/lib/src/: afrim_api.rs  lib.rs  predicator.rs  utils.rs
