[package]
name = "service"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["staticlib"] # Creates static lib

[dependencies]
afrim-config = { git = "https://github.com/pythonbrad/afrim", version = "0.4.5" }
afrim-preprocessor = { git = "https://github.com/pythonbrad/afrim", version = "0.6.1" }
anyhow = "1.0.87"
ibus = { path = "../ibus" }
log = "0.4.22"
simple-log = "1.7.3"

[build-dependencies]
cbindgen = "0.27.0"
