[package]
name = "service"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["staticlib"] # Creates static lib

[features]
default = ["rhai"]
rhai = ["afrim-config/rhai", "afrim-translator/rhai"]

[dependencies]
afrim-config = { git = "https://github.com/pythonbrad/afrim", version = "0.4.5" }
afrim-preprocessor = { git = "https://github.com/pythonbrad/afrim", version = "0.6.1" }
afrim-translator = { git = "https://github.com/pythonbrad/afrim", version = "0.2.1" }
anyhow = "1.0.87"
env_logger = "0.11.5"
ibus = { path = "../ibus" }
log = "0.4.22"

[build-dependencies]
cbindgen = "0.27.0"
